# patch-image

./: Changes.md  LICENSE  Makefile  README.md  ToDo  flatpak.cabal.json  patch-image.cabal
src/: Accelerate.hs  Arithmetic.hs  Complex.hs  Degree.hs  Draft.hs  Knead.hs  KneadShape.hs  LinearAlgebra.hs  Main.hs  MatchImageBorders.hs  Option.hs  State.hs
src/Knead/: CArray.hs  Color.hs  Shape.hs
