Name:           patch-image
Version:        0.0
License:        BSD3
License-File:   LICENSE
Author:         Henning Thielemann <haskell@henning-thielemann.de>
Maintainer:     Henning Thielemann <haskell@henning-thielemann.de>
Homepage:       http://code.haskell.org/~thielema/patch-image/
Category:       Graphics
Synopsis:       Compose a big image from overlapping parts
Description:    Compose a big image from overlapping parts
Tested-With:    GHC==7.4.2
Cabal-Version:  >=1.6
Build-Type:     Simple

Source-Repository this
  Tag:         0.0
  Type:        darcs
  Location:    http://code.haskell.org/~thielema/patch-image/

Source-Repository head
  Type:        darcs
  Location:    http://code.haskell.org/~thielema/patch-image/

Executable patch-image
  Main-Is: Main.hs
  Hs-Source-Dirs: src

  Build-Depends:
    JuicyPixels >=2.0 && <2.1,
    GeomAlgLib >=0.2 && <0.3,
    base >=4 && <5

  GHC-Options: -Wall -fwarn-tabs -fwarn-incomplete-record-updates
