Name:           patch-image
Version:        0.1
License:        BSD3
License-File:   LICENSE
Author:         Henning Thielemann <haskell@henning-thielemann.de>
Maintainer:     Henning Thielemann <haskell@henning-thielemann.de>
Homepage:       http://code.haskell.org/~thielema/patch-image/
Category:       Graphics
Synopsis:       Compose a big image from overlapping parts
Description:    Compose a big image from overlapping parts
Tested-With:    GHC==7.8.3
Cabal-Version:  >=1.6
Build-Type:     Simple

Source-Repository this
  Tag:         0.1
  Type:        darcs
  Location:    http://code.haskell.org/~thielema/patch-image/

Source-Repository head
  Type:        darcs
  Location:    http://code.haskell.org/~thielema/patch-image/

Executable patch-image
  Main-Is: Accelerate.hs
  Other-Modules:
    Option.Utility
    Option
  Hs-Source-Dirs: src

  Build-Depends:
    accelerate-arithmetic >=0.0 && <0.1,
    accelerate-utility >=0.0 && <0.1,
    accelerate-cuda >=0.15 && <0.16,
    accelerate-fft >=0.15 && <0.16,
    accelerate-io >=0.15 && <0.16,
    accelerate >=0.15 && <0.16,
    JuicyPixels >=2.0 && <3.2,
    GeomAlgLib,
    hmatrix >=0.15 && <0.16,
    gnuplot >=0.5 && <0.6,
    vector >=0.10 && <0.11,
    Cabal >=1.18 && <1.22,
    filepath >=1.3 && <1.4,
    utility-ht >=0.0.1 && <0.1,
    base >=4 && <5

  GHC-Options: -Wall -threaded -fwarn-tabs -fwarn-incomplete-record-updates

Executable patch-image-draft
  Main-Is: Draft.hs
  Hs-Source-Dirs: src

  Build-Depends:
    JuicyPixels >=2.0 && <3.2,
    GeomAlgLib >=0.2 && <0.3,
    utility-ht >=0.0.1 && <0.1,
    base >=4 && <5

  GHC-Options: -Wall -fwarn-tabs -fwarn-incomplete-record-updates
